# money

./: .gitignore  README.md  agents.md  pyproject.toml
src/: __init__.py  account.py  account_adapters.py  advisor.py  banker.py  main.py  report.py  tag_manager.py  tagger.py  transaction.py  utilities.py
src/accounts/: banker.py
src/accounts/adapters/: __init__.py  account.py
src/accounts/adapters/bank/: __init__.py  apple.py  bank_account.py  esl.py  pnc.py  sofi.py
src/accounts/adapters/credit/: __init__.py  apple.py  chase.py  credit_account.py  credit_card.py  wells_fargo.py
src/bank_accounts/: apple.py  pnc.py  sofi.py
src/banking/: banker.py
src/banking/accounts/: apple.py  bank_account.py  pnc.py  sofi.py
src/categories/: category.py  income.py  interest.py
src/tagging/: __init__.py  tag_manager.py  taggers.py  transfer_tagger.py
src/tracking/: category.py  tracker.py
src/tracking/categories/: category.py  house.py  income.py  interest.py  invest.py  jody.py  rewards.py  transfer.py
