[project]
name = "money"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh Gillette", email = "joshtgillette@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0"
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
